Fixed z-index of splash and rules

--- a/css/main.styl
+++ b/css/main.styl
@@ -61,6 +61,7 @@ body
 .play-game
     .rules
         position absolute
+        z-index 1
         left 200px
         top 5px
         background-color #fafafa
@@ -177,6 +178,7 @@ body
 
 .splash
     position absolute
+    z-index 1000
     background-color rgba(255,65,0,0.9)
     visibility hidden
     td
